--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,8 +1,5 @@
 <%= form_for @song  do |f| %>
-  <% if @song.artist.nil? %>
-  <%= f.select :artist_id, options_from_collection_for_select(Artist.all, :id, :name) %><br>
-  <% end %>
-  <%= f.hidden_field :artist_id %>
+<%= artist_id_field(@song) %><br>
   <%= f.label :title %>
   <%= f.text_field :title %><br>
   <%= f.label :artist_name %>
