--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,5 +1,4 @@
 <h1><%= @song.title %></h1>
 <p>by <%= link_to @song.artist.name, artist_path(@song.artist) if @song.artist %>
-(<%= link_to "Add Artist",
-edit_artist_song_path(@song.artist, @song) if @song.artist %>)</p>
-
+<%= link_to "Add Artist",
+edit_artist_song_path(@song.artist, @song) if @song.artist %></p>
