automatically backed up by learn

--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @song.title %></h1>
 <p>by <%= link_to @song.artist.name, artist_path(@song.artist) if @song.artist %>
 <%= link_to "Add Artist",
-edit_song_path(song) if @song.artist %></p>
+edit_song_path(@song) if @song.artist %></p>
