--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @song  do |f| %>
-<%= artist_id_field(@song) %><br>
+
+  <%= artist_select(@song.artist, @song)
   <%= f.label :title %>
   <%= f.text_field :title %><br>
   <%= f.label :artist_name %>
